--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/awesome/awesome-wm-widgets"]
 	path = .config/awesome/awesome-wm-widgets
 	url = git@github.com:streetturtle/awesome-wm-widgets.git
+[submodule ".config/zsh/.zprezto"]
+	path = .config/zsh/.zprezto
+	url = git@github.com:Jaco-Minnaar/prezto.git
