--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -707,7 +707,7 @@ disable_ligatures cursor
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-# window_padding_width 0
+window_padding_width 5
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -737,12 +737,12 @@ disable_ligatures cursor
 #: The color for the border of inactive windows in which a bell has
 #: occurred
 
-# inactive_text_alpha 1.0
+inactive_text_alpha 0.6
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
