--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@
 #: characters.
 
 font_family         JetBrainsMono Nerd Font
-bold_font           JetBrainsMono Nerd Font Bold
+bold_font           auto
 italic_font         auto
 bold_italic_font    auto
 
