--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -965,7 +965,7 @@ include gruvbox_dark.conf
 
 #: The foreground and background colors
 
-# background_opacity 1.0
+background_opacity 0.65
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
