--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@ set -g mouse on
 unbind C-b
 set-option -g prefix C-a
 set-option -ga terminal-overrides ",alacritty:Tc"
+# set-option -as terminal-overrides ",xterm*:RGB"
 
 bind | split-window -h
 bind - split-window -v
@@ -12,6 +13,7 @@ unbind %
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
 set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark' # or 'light'
 
