--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -599,7 +599,7 @@ disable_ligatures cursor
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -620,7 +620,7 @@ disable_ligatures cursor
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on linux.
 
-# bell_on_tab "🔔 "
+bell_on_tab "🔔 "
 
 #: Some text or a unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has a bell. If you want to use leading
