Added tokyonight and catppuccin themes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,7 +25,7 @@ bold_italic_font    auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 10.0
+font_size 11.0
 
 #: Font size (in pts)
 
@@ -959,13 +959,15 @@ hide_window_decorations yes
 
 #: Color scheme {{{
 
-include gruvbox_dark.conf
+# include gruvbox_dark.conf
+# include tokyonight_night.conf
+include catppuccin_mocha.conf
 # foreground #dddddd
 # background #000000
 
 #: The foreground and background colors
 
-background_opacity 0.65
+background_opacity 1
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
