--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -145,16 +145,16 @@ opacity-rule = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 10
-
-# Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  # "window_type = 'dock'",
-  # "window_type = 'desktop'"
-  "class_g = 'awesome'"
-];
-
-round-borders = 1;
+# corner-radius = 10
+#
+# # Exclude conditions for rounded corners.
+# rounded-corners-exclude = [
+#   # "window_type = 'dock'",
+#   # "window_type = 'desktop'"
+#   "class_g = 'awesome'"
+# ];
+#
+# round-borders = 0;
 
 
 #################################
