--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -959,9 +959,9 @@ hide_window_decorations yes
 
 #: Color scheme {{{
 
-# include gruvbox_dark.conf
+include gruvbox_dark.conf
 # include tokyonight_night.conf
-include catppuccin_mocha.conf
+# include catppuccin_mocha.conf
 # foreground #dddddd
 # background #000000
 
