--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,11 +4,12 @@ set -g mouse on
 unbind C-b
 set-option -g prefix C-a
 
-set-option -sa terminal-features ",xterm-kitty:RGB"
+set-option -sa terminal-features ",xterm-256color:RGB"
 # set-option -ga terminal-overrides ",xterm-kitty:Tc"
 
 set-option -sg escape-time 10
 set-option -g focus-events on
+set -g allow-passthrough on
 
 bind | split-window -h
 bind - split-window -v
