updates to dotfiles

--- a/.config/lazygit/state.yml
+++ b/.config/lazygit/state.yml
@@ -1,5 +1,7 @@
 lastupdatecheck: 0
 recentrepos:
+- /home/jaco/src/personal/soundreaperstudios
+- /home/jaco/src/personal/proto_lsp
 - /home/jaco/src/bscglobal/proxy-server
 - /home/jaco/src/bscglobal/dps-app
 - /home/jaco/.config/zsh/.zprezto
