--- a/.config/kitty/gruvbox_dark.conf
+++ b/.config/kitty/gruvbox_dark.conf
@@ -12,8 +12,8 @@ bell_border_color       #8ec07c
 active_border_color     #d3869b
 inactive_border_color   #665c54
 
-background              #202020
-foreground              #fbf1c7
+background              #282828
+foreground              #ebdbb2
 selection_foreground    #928374
 selection_background    #ebdbb2
 
