--- a/.config/kitty/gruvbox_dark.conf
+++ b/.config/kitty/gruvbox_dark.conf
@@ -13,7 +13,7 @@ active_border_color     #d3869b
 inactive_border_color   #665c54
 
 background              #282828
-foreground              #ebdbb2
+foreground              #fbf1c7
 selection_foreground    #928374
 selection_background    #ebdbb2
 
