add nvim changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,8 @@ set-option -sa terminal-features ",xterm-256color:RGB"
 
 set-option -sg escape-time 10
 set-option -g focus-events on
-set -g allow-passthrough on
+set-option -g default-terminal "tmux-256color"
+# set -g allow-passthrough on
 
 bind | split-window -h
 bind - split-window -v
