--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -959,8 +959,8 @@ hide_window_decorations yes
 
 #: Color scheme {{{
 
-include gruvbox_dark.conf
-# include tokyonight_night.conf
+# include gruvbox_darcwk.conf
+include tokyonight_night.conf
 # include catppuccin_mocha.conf
 # foreground #dddddd
 # background #000000
