--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set-option -g prefix C-a
 set-option -sa terminal-features ",xterm-256color:RGB"
 # set-option -ga terminal-overrides ",xterm-kitty:Tc"
 
-set -g base-index 1
+set-option -g base-index 1
 setw -g pane-base-index 1
 set-option -sg escape-time 10
 set-option -g focus-events on
@@ -16,8 +16,12 @@ set-option -g default-terminal "tmux-256color"
 
 bind | split-window -h
 bind - split-window -v
+bind-key C-u run-shell -b "tmux capture-pane -J -p | grep -oE \'(https?):\/\/[^>"\""]*\' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs open"
+bind-key m run-shell -b "sh /home/jaco/code/scripts/tmux_git_worktree.sh"
 unbind '"'
 unbind %
+
+set-option -g @gruvbox_window_tabs_enabled on
 
 # set -g @catppuccin_window_left_separator "█"
 # set -g @catppuccin_window_right_separator "█ "
@@ -36,7 +40,8 @@ unbind %
 # set -g @catppuccin_status_fill "all"
 # set -g @catppuccin_status_connect_separator "no"
 
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'Puerling/tmux-gruvbox'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
